# apps/api/src/modules/taxonomy/api.py
@@ -12,6 +12,8 @@ from fastapi import APIRouter, Depends
 from modules.taxonomy.schema import (
     TaxonomyLeafNodeDetailsRequest,
     TaxonomyLeafNodeDetailsResponse,
+    TaxonomyLeafNodeTitlesRequest,
+    TaxonomyLeafNodeTitlesResponse,
     TaxonomyNodeViewResponse,
     TaxonomyRootViewResponse,
 )
@@ -46,6 +48,20 @@ def build_router(*, get_taxonomy_service: TaxonomyServiceProvider) -> APIRouter:
         taxonomy_service: TaxonomyService = Depends(get_taxonomy_service),
     ) -> TaxonomyLeafNodeDetailsResponse:
         return await taxonomy_service.get_leaf_node_details(
+            node_id=node_id,
+            node_ids=request.node_ids,
+        )
+
+    @router.post(
+        "/view/leaves/{node_id}/titles",
+        response_model=TaxonomyLeafNodeTitlesResponse,
+    )
+    async def get_leaf_node_titles(
+        node_id: int,
+        request: TaxonomyLeafNodeTitlesRequest,
+        taxonomy_service: TaxonomyService = Depends(get_taxonomy_service),
+    ) -> TaxonomyLeafNodeTitlesResponse:
+        return await taxonomy_service.get_leaf_node_titles(
             node_id=node_id,
             node_ids=request.node_ids,
         )
