# packages/contracts/openapi/openapi.json
@@ -299,6 +299,11 @@
             "title": "Content",
             "type": "string"
           },
+          "current_version": {
+            "exclusiveMinimum": 0.0,
+            "title": "Current Version",
+            "type": "integer"
+          },
           "id": {
             "exclusiveMinimum": 0.0,
             "title": "Id",
@@ -312,6 +317,7 @@
         },
         "required": [
           "id",
+          "current_version",
           "title",
           "content"
         ],
@@ -347,6 +353,58 @@
           "nodes"
         ],
         "title": "TaxonomyLeafNodeDetailsResponse",
+        "type": "object"
+      },
+      "TaxonomyLeafNodeTitleResponse": {
+        "additionalProperties": false,
+        "properties": {
+          "id": {
+            "exclusiveMinimum": 0.0,
+            "title": "Id",
+            "type": "integer"
+          },
+          "title": {
+            "minLength": 1,
+            "title": "Title",
+            "type": "string"
+          }
+        },
+        "required": [
+          "id",
+          "title"
+        ],
+        "title": "TaxonomyLeafNodeTitleResponse",
+        "type": "object"
+      },
+      "TaxonomyLeafNodeTitlesRequest": {
+        "additionalProperties": false,
+        "properties": {
+          "node_ids": {
+            "items": {
+              "type": "integer"
+            },
+            "title": "Node Ids",
+            "type": "array"
+          }
+        },
+        "title": "TaxonomyLeafNodeTitlesRequest",
+        "type": "object"
+      },
+      "TaxonomyLeafNodeTitlesResponse": {
+        "additionalProperties": false,
+        "properties": {
+          "nodes": {
+            "items": {
+              "$ref": "#/components/schemas/TaxonomyLeafNodeTitleResponse"
+            },
+            "title": "Nodes",
+            "type": "array"
+          }
+        },
+        "required": [
+          "nodes"
+        ],
+        "title": "TaxonomyLeafNodeTitlesResponse",
         "type": "object"
       },
       "TaxonomyNodeBranchViewResponse": {
@@ -843,6 +901,58 @@
           }
         },
         "summary": "Get Leaf Node Details",
+        "tags": [
+          "taxonomy"
+        ]
+      }
+    },
+    "/api/v1/taxonomy/view/leaves/{node_id}/titles": {
+      "post": {
+        "operationId": "get_leaf_node_titles_api_v1_taxonomy_view_leaves__node_id__titles_post",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "node_id",
+            "required": true,
+            "schema": {
+              "title": "Node Id",
+              "type": "integer"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/TaxonomyLeafNodeTitlesRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TaxonomyLeafNodeTitlesResponse"
+                }
+              }
+            },
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "summary": "Get Leaf Node Titles",
         "tags": [
           "taxonomy"
         ]
